--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "url": "git://github.com/Enome/kwery.git"
   },
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "eql": "0.0.4"
+  },
   "devDependencies": {
     "should": "~0.6.3"
   },
