--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "author": "Geert Pasteels <geert.pasteels@gmail.com>",
   "name": "kwery",
   "description": "Find objects in an array or tree structure by regex or attribute value",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "repository": {
     "type": "git",
     "url": "git://github.com/Enome/kwery.git"
   },
-  "dependencies": {
+  "devDependencies": {
     "eql": "0.0.5"
   }
 }
